// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot with link 1`] = `
<div
  class="sc-AykKD hpqxCY"
  data-testid="files-manager-item"
>
  <test-file-stub
    classname="sc-AykKF jZBrqQ"
  />
  <div
    class="sc-AykKG iWSwBn"
  >
    <p
      class="sc-AykKC lnaoTj"
    >
      Voice Recorder
    </p>
    <p
      class="sc-AykKC flnmGg"
    >
      3 files (4.0 GB)
    </p>
  </div>
  <a
    class="sc-AykKE hiWxHY"
    href="#/tools/voice-recorder"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </a>
</div>
`;

exports[`should match snapshot without link 1`] = `
<div
  class="sc-AykKD hpqxCY"
  data-testid="files-manager-item"
>
  <test-file-stub
    classname="sc-AykKF jZBrqQ"
  />
  <div
    class="sc-AykKG iWSwBn"
  >
    <p
      class="sc-AykKC lnaoTj"
    >
      Voice Recorder
    </p>
    <p
      class="sc-AykKC flnmGg"
    >
      3 files (4.0 GB)
    </p>
  </div>
</div>
`;
